--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
-  "version": "0.0.0",
+  "version": "0.0.2",
+  "author": {
+    "name": "Stanislav Seregin",
+    "url": "https://github.com/StanislavSeregin"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:StanislavSeregin/ngx-dotnet.git"
+  },
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -9,32 +17,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "7.2.3",
+    "@angular/common": "7.2.3",
+    "@angular/compiler": "7.2.3",
+    "@angular/core": "7.2.3",
+    "@angular/forms": "7.2.3",
+    "@angular/platform-browser": "7.2.3",
+    "@angular/platform-browser-dynamic": "7.2.3",
+    "@angular/router": "7.2.3",
+    "core-js": "2.6.3",
+    "rxjs": "6.4.0",
+    "tslib": "1.9.3",
+    "zone.js": "0.8.29",
+    "ngx-dotnet": "0.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular-devkit/build-ng-packagr": "~0.11.0",
-    "@angular/cli": "~7.1.3",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "ng-packagr": "^4.2.0",
-    "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "@angular-devkit/build-angular": "0.13.0",
+    "@angular-devkit/build-ng-packagr": "0.13.0",
+    "@angular/cli": "7.3.0",
+    "@angular/compiler-cli": "7.2.3",
+    "@angular/language-service": "7.2.3",
+    "@types/node": "10.12.21",
+    "codelyzer": "4.5.0",
+    "ng-packagr": "4.7.0",
+    "ts-node": "8.0.2",
+    "tsickle": "0.34.3",
+    "tslib": "1.9.3",
+    "tslint": "5.12.1",
+    "typescript": "3.1.6"
   }
 }
