Simplify getting ready status of runtime

--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,11 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              { "glob": "**/*", "input": "node_modules/ngx-dotnet/assets", "output": "assets/dotnet" }
+              {
+                "glob": "**/*",
+                "input": "node_modules/ngx-dotnet/assets",
+                "output": "assets/dotnet"
+              }
             ],
             "styles": [
               "src/styles.scss"
