--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": {
     "name": "Stanislav Seregin",
     "url": "https://github.com/StanislavSeregin"
@@ -13,7 +13,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-lib": "ng build ngx-dotnet && cp -r ./projects/ngx-dotnet/src/assets ./dist/ngx-dotnet/assets",
+    "build-lib": "ng build ngx-dotnet && cp -r ./projects/ngx-dotnet/src/assets ./dist/ngx-dotnet/assets && cp ./README.md ./dist/ngx-dotnet",
     "lint": "ng lint"
   },
   "private": true,
@@ -30,7 +30,7 @@
     "rxjs": "6.4.0",
     "tslib": "1.9.3",
     "zone.js": "0.8.29",
-    "ngx-dotnet": "0.1.0"
+    "ngx-dotnet": "0.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.13.0",
